0.76
        Really add missing prereq of DBI!
        Add testing of database schema upgrades (#32)
        Move to new schema version 10, including some missing indexes
          and support for verified flags. Note that
          the code using this column has not yet been written (#25, #34).

0.75	11 May 2008
        Added support for selecting versions by moderation status (see
          OpenGuides ticket #142).
        Added "new_only" parameter to ->list_recent_changes, so you can ask
          for e.g. all pages added in the last week.  This involved a bit of
          a rewrite of ->list_recent_changes, so please keep an eye out for
          any bugs that may have been introduced (I'm not convinced the test
          suite covered everything it should have).
        Fix some badly-formatted POD documentation which accidentally included
          some code
        Fix uninitialized warnings in feed tests
        Fix database setup to ignore tables that aren't Wiki::Toolkit tables
        Fix test suite's incorrect passing of DBIxFTSMySQL connection
          parameters
        Add missing prereq of DBI (caught by the CPAN testers) and don't
          use DBI in Makefile.PL
        Add new scripts wiki-toolkit-delete-node and
          wiki-toolkit-revert-to-date

0.74    9  June 2007
        Added list_last_version_before method, to get the version of all the
         nodes at a given point in time
        Updated version on Text::WikiFormat dependency to avoid long-standing
         test failure with old version
        Bump version number of Wiki::Toolkit::Plugin as this was not done
         the last time it was changed (for CPAN.pm compatibility)

0.73    12 December 2006
        Added parse_feed_timestamp method
        Added encoding parameter to the Feed methods, to allow overriding
          the store's encoding.

0.72    15 September 2006
        Install wiki-toolkit-rename-node

0.71    30 August 2006